--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <scm>
         <connection>scm:git:https://github.com/jelmerk/maven-playground.git</connection>
         <developerConnection>scm:git:https://github.com/jelmerk/maven-playground.git</developerConnection>
-        <url>scm:git:https://github.com/jelmerk/maven-playground.git</url>
+        <url>https://github.com/jelmerk/maven-playground.git</url>
     </scm>
     
     <dependencyManagement>
@@ -42,6 +42,11 @@
     
     <build>
         <plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>        
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
